--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./t.webp" />
-    <meta name="keywords" content="youtube, wester youtube, youtube.com, video korish ">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Youtube</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="./t.webp" />
+        <meta
+            name="keywords"
+            content="youtube, wester youtube, youtube.com, video korish "
+        />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Youtube</title>
+        <script src="
+https://cdn.jsdelivr.net/npm/regenerator-runtime@0.14.1/runtime.min.js
+"></script>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.jsx"></script>
+    </body>
 </html>
